# seolpyo-dstory

./: MANIFEST.in  README.md  processors.py  pyproject.toml  pyproject.txt  settings.py  setup.py
models/: __init__.py
seolpyo_dstory/: admin.py  apps.py  forms.py  processors.py  settings.py  urls.py
seolpyo_dstory/migrations/: 0001_initial.py
seolpyo_dstory/models/: postmodel.py  usermodel.py
seolpyo_dstory/templates/: base.html
seolpyo_dstory/templates/seolpyo_dstory/: detail.html  form.html  signup.html  sitemap.html  summernote.html
seolpyo_dstory/utils/: __init__.py  request.py  restore.py
seolpyo_dstory/views/: __init__.py  detail.py  etc.py  feed.py  handler.py  list.py  post.py  user.py
templates/: 40x.html
templates/seolpyo_dstory/: home.html  list.html  login.html
utils/: request.py  restore.py
